db> pnpm add -D graphile-migrate

--- a/apps/db/package.json
+++ b/apps/db/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "graphile-migrate": "^1.4.1"
+  }
 }
