--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "DBURL",
         "graphile",
+        "pgdg",
+        "plpgsql",
+        "postgis",
         "postgraphile"
     ]
 }
