db# update a npm script

--- a/apps/db/package.json
+++ b/apps/db/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dump": ". ./.env && ./scripts/pg_dump --schema-only --no-owner --exclude-schema=graphile_migrate --file=data/schema.sql \"$DATABASE_URL\"",
+    "dump": ". ./.env && URL=\"${GM_DBURL:-$DATABASE_URL}\" && ./scripts/pg_dump --schema-only --no-owner --exclude-schema=graphile_migrate --file=data/schema-$(echo $URL|sha256sum|awk '{print $1}').sql $URL",
     "gm": ". ./.env && graphile-migrate",
     "watch": "npm run gm watch"
   },
