pg4> pnpm add @graphile/pg-pubsub

--- a/apps/pg4/package.json
+++ b/apps/pg4/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphile/pg-pubsub": "^4.13.0",
     "dotenv": "^16.3.1",
     "postgraphile": "^4.13.0"
   },
