--- a/apps/pg4/package.json
+++ b/apps/pg4/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@graphile/pg-pubsub": "^4.13.0",
     "dotenv": "^16.3.1",
+    "graphile-utils": "^4.13.0",
     "postgraphile": "^4.13.0"
   },
   "devDependencies": {
